# acl-anthology

./: README.md  pyproject.toml
acl_anthology/: __init__.py  acl_anthology_downloader.py
script/: to_csv.py
tests/: test_acl_anthology.py
