[tool.poetry]
name = "acl-anthology"
version = "0.1.0"
description = ""
authors = ["himkt <himkt@cookpad.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"
requests = "^2.24.0"
typer = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
