[tool.poetry]
name = "acl-anthology"
version = "0.1.0"
description = ""
authors = ["himkt <himkt@klis.tsukuba.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
